Fix rainbow nav overflow issue

--- a/app/assets/stylesheets/global.sass
+++ b/app/assets/stylesheets/global.sass
@@ -40,7 +40,7 @@ nav ul
 
 // Rainbow nav
 .rainbow
-
+	overflow: hidden
 	padding-top: 5px
 	background: $white /* not working, lets see some white */
 	background: -webkit-gradient(linear,  left top,  right top, color-stop(0%, RGBA(249, 89, 89, .5)), color-stop(15%, RGBA(255, 82, 0, .5)),color-stop(30%, RGBA(243, 241, 105, .5)),color-stop(50%, RGBA(85, 164, 78, .5)),color-stop(65%, RGBA(45, 108, 223, .5)),color-stop(80%, RGBA(139, 47, 151, .5)),color-stop(100%, rgba(249, 89, 89, .5)))
